<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@id/app_info_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="@dimen/app_details_icon_scale_X"
                android:layout_height="@dimen/app_details_icon_scale_Y">

                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:id="@+id/app_details_download_progress"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:max="100"
                    android:progress="0"
                    android:visibility="invisible"
                    app:indeterminateAnimationType="disjoint"
                    app:indicatorSize="48dp"
                    app:trackThickness="70dp" />

                <ImageView
                    android:id="@id/app_details_icon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/app_details_icon_margin"
                    android:paddingHorizontal="@dimen/app_details_ic_margin_X"
                    android:paddingVertical="@dimen/app_details_ic_margin_Y"
                    android:src="@mipmap/ic_launcher" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="@dimen/app_details_install_button_width"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@id/app_details_install_button"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/app_details_install_button_height"
                    android:text="@string/app_details_install"
                    android:textSize="@dimen/app_details_install_button_font_size" />

                <Button
                    android:id="@id/app_details_open_app_button"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/app_details_install_button_height"
                    android:text="@string/app_details_open_app"
                    android:textSize="@dimen/app_details_install_button_font_size" />
            </LinearLayout>
            />
        </RelativeLayout>
        <!--Detalhes do App-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_details_vendor" />

                <TextView
                    android:id="@id/app_details_vendor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_details_version" />

                <TextView
                    android:id="@id/app_details_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_details_source" />

                <TextView
                    android:id="@id/app_details_source"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
        <!--Descrição do App-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_details_description_indicator"
            android:textAlignment="center"
            android:textSize="@dimen/app_details_description_indicator_font_size" />

        <TextView
            android:id="@id/app_details_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/app_details_description_font_size" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>